Use open rather than export (--add-opens vs --add-export) for sun.nio.ch