@@ -46,7 +46,7 @@ task unpackTestJar(type: Copy){
 //}
 test {
     jacoco {
-        jvmArgs += ['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        jvmArgs += ['--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
                    '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.io=ALL-UNNAMED',
